[#12667] prepare to merge
- property descriptors now use `ValueSetDefinitionIdentifier`s to reference the relevant value set
- introduce `PersistableObject`: a simple skeleton class with only an `URI` property. `ObjectDefinition` creation will fall back to this type if no appropriate Java class is available. This is helpful when brand new definitions are created: the `URI` accessor and mutator mechanisms are already present in the basic definition embellished later.
- `Storage` may now offer new `StorageObject` instances based on an `ObjectDefinition` (no need to pass the Java type and reconstruct the definition in the `Storage` instance)
- `StorageFS` now stores the provided object definition's qualified name in the file data (for extended definitions the class information would be inaccurate)
- `ObjectStorageImpl` now accepts the `ObjectDefinition` provided by the `ObjectDefinitionApi` (the `Class.forName(String)` lookup takes place in the API's invoked method), exception is thrown only if no type information can be extracted from the file system storage entry.
- `ModifyContributionApiStorageImpl` now creates the `StorageObject` based on the definition available instead of passing the definition's class and letting the storage reconstruct the definition.

- the object extension API and the object definition API are now depend on each other: when an object definition is requested by alias, the `ObjectExtensionApi` will attempt to construct it based on the stored descriptors.
- new instances of extended objects may be created by invoking `ObjectExtensionApi.newInstance(String, String)`.

--- a/api-domain/build.gradle
+++ b/api-domain/build.gradle
@@ -24,6 +24,7 @@ smartbit4all {
   		"Value": "org.smartbit4all.api.value.bean.Value",
   		"ValueSetData": "org.smartbit4all.api.value.bean.ValueSetData",
   		"ValueSet": "org.smartbit4all.api.view.bean.ValueSet",
+  		"ValueSetDefinitionIdentifier": "org.smartbit4all.api.value.bean.ValueSetDefinitionIdentifier",
   		"ComponentConstraint": "org.smartbit4all.api.view.bean.ComponentConstraint",
   		"UiActionConstraint": "org.smartbit4all.api.view.bean.UiActionConstraint",
   		"FilterExpressionFieldList": "org.smartbit4all.api.filterexpression.bean.FilterExpressionFieldList",
