[#13152] change list of String to list of Value in matrix rows and columns

--- a/api-domain/src/main/resources/descriptors/formdefinition-api.yaml
+++ b/api-domain/src/main/resources/descriptors/formdefinition-api.yaml
@@ -162,12 +162,12 @@ components:
         rows:
           type: array
           items:
-            type: string
+            type: Value
           description: The keys
         columns:
           type: array
           items:
-            type: string
+            type: Value
           description: The possible values
         data:
           type: object
