[#13357] generic grid handling for `RefObject`s
- define `RefObject` (formerly Association, to be renamed)
- `ObjectDisplay` may unwind layouts to a collection of forms and grids
- `RefObject` inline lists are laid out in a grid by default with `ObjectExtensionApiImpl`
- `AssociationConfig`s may be registered to the Spring application context to enable dynamic grid registration in `View`s
- the `AssocationGridApi` now offers a simplistic method for the above purpose

--- a/api-domain/src/main/resources/descriptors/object-api.yaml
+++ b/api-domain/src/main/resources/descriptors/object-api.yaml
@@ -670,10 +670,10 @@ components:
           items:
             type: string
 
-    Association:
+    RefObject:
       description: |
         Wraps an object URI defining a qualified association between two domain objects.
-        
+
         It is meant to be stored inline in an object denoting a unidirectional qualified reference. The association may
         reference a link object, which is a standalone persisted object, describing the qualities and participant of a
         multi-directional binding between aggregate roots. If such link object is present, all objects bound together by
