[#13353] bff-domain created

--- a/api-domain/src/main/resources/descriptors/formdefinition-api.yaml
+++ b/api-domain/src/main/resources/descriptors/formdefinition-api.yaml
@@ -46,6 +46,7 @@ components:
         - RICH_TEXT
         - SORTABLE
         - MATRIX
+        - MONTH_PICKER
     SmartLayoutDefinition:
       type: object
       required: [widgets]
