--- a/settings.gradle
+++ b/settings.gradle
@@ -11,6 +11,7 @@ include 'api-domain'
 include 'api-cli-rest'
 include 'api-srv-rest'
 include 'bff-api'
+include 'bff-domain'
 include 'sql'
 include 'json'
 include 'ui-api'
