--- a/bff-domain/build.gradle
+++ b/bff-domain/build.gradle
@@ -17,6 +17,7 @@ smartbit4all {
      "Group": "org.smartbit4all.api.org.bean.Group",
      "FilterExpressionBuilderModel": "org.smartbit4all.api.filterexpression.bean.FilterExpressionBuilderModel",
      "FilterExpressionFieldList": "org.smartbit4all.api.filterexpression.bean.FilterExpressionFieldList",
+     "SubjectTypeDescriptor" : "org.smartbit4all.api.org.bean.SubjectTypeDescriptor"
     ]
   }
 }
