--- a/api-domain/src/main/resources/descriptors/grid-api.yaml
+++ b/api-domain/src/main/resources/descriptors/grid-api.yaml
@@ -370,6 +370,12 @@ components:
           type: string
         typeClass:
           type: string
+        alwaysHidden:
+          type: boolean
+          default: false
+        alwaysShow:
+          type: boolean
+          default: false
     GridUpdateData:
       type: object
       description: |
