[#13634] UiAction.model => send model without validation

--- a/api-domain/src/main/resources/descriptors/view-api.yaml
+++ b/api-domain/src/main/resources/descriptors/view-api.yaml
@@ -858,6 +858,10 @@ components:
         input2Type:
           $ref: '#/components/schemas/UiActionInputType'
         submit:
+          description: If true, UiAction will submit the form (causing validation) and sends model in UiActionRequest.
+          type: boolean
+        model:
+          description: If true, UiAction will NOT submit the form and sends model WITHOUT VALIDATION in UiActionRequest.
           type: boolean
         confirm:
           type: boolean
