--- a/api-domain/src/main/resources/descriptors/grid-api.yaml
+++ b/api-domain/src/main/resources/descriptors/grid-api.yaml
@@ -349,6 +349,8 @@ components:
             $ref: '#/components/schemas/GridSelectionType'
         preserveSelectionOnPageChange:
           type: boolean
+        showEditColumns:
+          type: boolean
     GridSelectionMode:
       type: string
       enum:
