[#13480] add folderUri property to BinaryContentData

--- a/api-domain/src/main/resources/descriptors/attachment-api.yaml
+++ b/api-domain/src/main/resources/descriptors/attachment-api.yaml
@@ -43,3 +43,6 @@ components:
           format: int64
         contentHash:
           type: string
+        folderUri:
+          type: string
+          format: uri
