--- a/api-domain/build.gradle
+++ b/api-domain/build.gradle
@@ -43,6 +43,7 @@ smartbit4all {
   		"StoredCollectionDescriptor": "org.smartbit4all.api.collection.bean.StoredCollectionDescriptor",
   		"ObjectAspect": "org.smartbit4all.api.storage.bean.ObjectAspect",
   		"SearchIndexResultPageConfig": "org.smartbit4all.api.filterexpression.bean.SearchIndexResultPageConfig",
+  		"LangString": "org.smartbit4all.api.object.bean.LangString"
   	]
   }
 }
